# onlinerpg.ca

./: .gitignore  README.md  TODO.txt  _build-commands  index.html  jsconfig.json  package-lock.json  package.json  php.txt  questions  run.sh  update.sh
appserver/: CMakeLists.txt  Network.pcm  TODO  library install
appserver/db/: data.db
appserver/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
appserver/debug/.cmake/api/v1/reply/: cache-v2-21a52e1f956f5b1d6e69.json  cmakeFiles-v1-9271eba16091b7ac16f1.json  codemodel-v2-b954d7f57f14d8276291.json  index-2024-10-31T16-26-59-0429.json  target-BrowserRPG-Debug-48f9442f7f76bb7e1a5d.json
appserver/release/: .fuse_hidden00023d7100000099  BrowserRPG
appserver/src/abilities/debuffs/: Disease.cpp  Disease.h
appserver/src/camera/: camera.cpp  camera.h
appserver/src/db/: db.cpp  db.h
appserver/src/game/: game.cpp  game.h
appserver/src/map/: chunk.cpp  chunk.h  labyrinth.cpp  labyrinth.h  map.cpp  map.h
appserver/src/networking/: receiving.cpp  receiving.h  send.cpp  send.h
appserver/src/objects/: components.cpp  components.h
appserver/src/objects/actions/: attack.cpp  attack.h  death.cpp  death.h
appserver/src/objects/attacks/: attacks.cpp
appserver/src/objects/collision/: collision.cpp  collision.h
appserver/src/objects/items/: backpack.cpp  backpack.h  equipment.cpp  equipment.h  inventory.cpp  inventory.h  items.cpp  items.h  loot.cpp  loot.h  modifiers.cpp  modifiers.h  types.h  update_items.cpp  update_items.h  use.cpp  use.h
appserver/src/objects/items/player_items/: backpack.cpp  backpack.h  equipment.cpp  inventory.cpp  update_items.cpp  update_items.h
appserver/src/objects/items/use_effects/: use_effects.cpp  use_effects.h
appserver/src/objects/movement/: movement.cpp  movement.h  pathing.cpp  pathing.h
appserver/src/objects/units/: player.cpp  player.h  spawn.cpp  spawn.h  units.cpp  units.h  update.cpp  update.h
appserver/src/objects/units/class/: warrior.cpp  warrior.h
appserver/src/objects/units/classes/: unit.cpp  unit.h  xp.cpp  xp.h
appserver/src/objects/units/species/: goblin.cpp  goblin.h
appserver/src/procgen/: procgen.cpp  procgen.h
appserver/src/server/: #main.cpp#  .#main.cpp  main.cpp  server.cpp  server.h
appserver/src/utils/: files.cpp  files.h  utils.cpp  utils.h
private/: functions.h.php  signup.h.php
private/include/: dbh.h.php  functions.h.php  login.h.php  signup.h.php
private/scripts/: footer.php  header.php  login.php  signup.php
private/scripts/includes/: dbh.h.php  login.h.php  logout.h.php  signup.h.php
public/: blog.php  body.php  charCreate.php  discover.php  enterGame.php  footer.php  game.php  gameBtn.php  header.php  index.php  login.php  logout.php  profile.php  session.php  signup.php  signupIntermediate.php
public/assets/fonts/press_start_2p/: PressStart2P.sfd
public/assets/graphics/: delIMGs.py  toPNG.py
public/assets/graphics/icons/: Italian - Mail - Walters 51575 - Hauberk - Wikipedia.html
public/assets/graphics/icons/Italian - Mail - Walters 51575 - Hauberk - Wikipedia_files/: load(1).php  load.php
public/assets/graphics/imgs/A_imgs/: diverse-viking-men-outdoors_23-2151689872.avif  sdasdas.avif  (+32 more)
public/css/: footer.css  game.css  nav.css  style.css
public/db/: data.db
public/include/: functions.h.php  login.h.php  signup.h.php
public/js/camera/: camera.js
public/js/collision/: collision.js
public/js/data/: sprites.js
public/js/db/: convert-db-to-base64.js  db.js  itemEffects.js  update-db.js
public/js/frontend/: charCreate.js  classes.js  footer.js  game.js  newGame.js  stats.js  tooltip.js  ui.js  webfont-loader.js
public/js/game/: game.js
public/js/graphics/: graphics.js  scale.js
public/js/input/: keyboard.js  mouse.js
public/js/input/action/: action.js
public/js/map/: map.js
public/js/movement/: movement.js
public/js/networking/: receive.js  send.js  socket.js
public/js/objects/: equipment.js  inventory.js  item.js  loot.js  objects.js
public/js/parse/: equipment.js  inventory.js  items.js  loot.js
public/js/skills/: skills.js
public/js/sound/: sound.js
public/js/spells/: spell.js
public/js/testing/: parsing.js
public/js/ui/: gameMenu.js  mainMenu.js
public/js/ui/gamePanels/: combatLog.js  crafting.js  gamePanels.js  log.js  loot.js  minimap.js  quests.js  spellBook.js  targetStats.js
public/js/ui/gamePanels.js/: targetStats.js
public/js/ui/menus/: bagMenu.js  buttons.js  gameMenu.js  mainMenu.js
public/js/ui/mouse/: mouse.js
public/js/units/: unitdef.js
public/js/utils/: utils.js
src/: index.js  keyboard_input.js  receive.js  units.js
src/data/: sprites.js
src/db/: db.js
src/graphics/: graphics.js
src/input/: keyboard.js
src/map/: map.js
src/movement/: movement.js
src/networking/: receive.js
src/objects/: objects.js
src/skills/: skills.js
temp_data/: .~lock.armours.ods#  .~lock.item bonuses.ods#  armours.ods  hames.ods  item bonuses.ods
webserver/: _build-commands  go.mod  main.go  template.html  webserver.go
webserver/templates/: template.html
webserver/webserver/: template.html
